Task/src/main/kotlin/com/example/assignment/global/error/CustomException.kt
package com.example.assignment.global.error

import com.example.assignment.global.error.response.ErrorProperty

open class CustomException (
    private val errorProperty: ErrorProperty
) : RuntimeException() {

    val status: Int
        get() = errorProperty.status

    override val message: String
        get() = errorProperty.message
}